--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="use_current_location">Use current location</string>
     <string name="select_location_from_map">Select location from map</string>
     <string name="black_bin">Black Bin</string>
+    <string name="blue_bin">Blue Bin</string>
     <string name="green_bin">Green Bin</string>
     <string name="yard_waste">Yard Waste</string>
 
