--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Ottawa Waste Schedule</string>
     <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_change_location">Change Location</string>
     <string name="title_activity_onboarding">OnboardingActivity</string>
     <string name="choose_location_for_waste_collection">Choose Location for Waste Collection</string>
     <string name="use_current_location">Use current location</string>
@@ -10,6 +10,7 @@
     <string name="blue_bin">Blue Bin</string>
     <string name="green_bin">Green Bin</string>
     <string name="yard_waste">Yard Waste</string>
+    <string name="garbage">Garbage</string>
 
     <!-- SyncAdapter related -->
     <string name="sync_account_type">capstoneproject.cameocoder.com</string>
