--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,24 @@
 <resources>
     <string name="app_name">Ottawa Waste Schedule</string>
+
+    <string name="title_activity_onboarding">OnboardingActivity</string>
     <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
     <string name="action_change_location">Change Location</string>
-    <string name="title_activity_onboarding">OnboardingActivity</string>
     <string name="choose_location_for_waste_collection">Choose Location for Waste Collection</string>
     <string name="use_current_location">Use current location</string>
     <string name="select_location_from_map">Select location from map</string>
-    <string name="black_bin">Black Bin</string>
-    <string name="blue_bin">Blue Bin</string>
+
+    <string name="no_schedule_to_display">No Schedule to display</string>
+    <string name="black_bin">Black Box</string>
+    <string name="blue_bin">Blue Box</string>
+    <string name="garbage">Garbage</string>
     <string name="green_bin">Green Bin</string>
     <string name="yard_waste">Yard Waste</string>
-    <string name="garbage">Garbage</string>
 
     <!-- SyncAdapter related -->
     <string name="sync_account_type">capstoneproject.cameocoder.com</string>
     <string name="content_authority">com.cameocoder.capstoneproject.app</string>
-    <string name="no_schedule_to_display">No Schedule to display</string>
+
+    <string name="widget_label">Next Pickup</string>
 
 </resources>
