--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="use_current_location">Use current location</string>
     <string name="select_location_from_map">Select location from map</string>
 
+    <string name="next_pickup">Next Garbage Pickup Tomorrow</string>
     <string name="and">and</string>
 
     <string name="no_schedule_to_display">No Schedule to display</string>
