--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="about_trash_icon">Trash Icon</string>
 
     <string name="more_link"><a href='http://ottawa.ca/en/residents/garbage-and-recycling'>Find out more about your Garbage and Recycling</a></string>
+
+    <string name="notification_channel_name">Pickup Reminder</string>
 </resources>
